[package]
name = "multipart"
edition = "2015"
version = "0.18.0"

authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A backend-agnostic extension for HTTP libraries that provides support for POST multipart/form-data requests on both client and server."

keywords = ["form-data", "hyper", "iron", "http", "upload"]

repository = "http://github.com/abonander/multipart"

documentation = "http://docs.rs/multipart/"

license = "MIT OR Apache-2.0"

readme = "README.md"

[dependencies]
log = "0.4"
mime = "0.3.14"
mime_guess = "2.0.1"
rand = "0.8"
tempfile = "3"

safemem = { version = "0.3" }
buf_redux = { git = "https://github.com/rakivo/buf_redux", default-features = false }
httparse = { version = "1.2" }
twoway = { version = "0.1" }
quick-error = { version = "1.2" }

[dev-dependencies]
env_logger = "0.5"

[features]
default = ["quick-error"]
quick-error = []